@@ -1,10 +1,13 @@
+# The settings in this file are very important. You can specify different environments
+# such as 'staging' or 'test', however usually only 'production' is needed
+
 production:
-  domain: getjobsworth.org  # The client specific hostname will be prepended to this domain
+  domain: getjobsworth.org  # The tenant specific hostname will be prepended to this domain
   productName: Jobsworth
   SSL: false
   store_root: <%= Rails.root.join("store") %>
 
-  # mailing
+  # outbound email settings
   email_domain: getjobsworth.org
   replyto: admin
   from: admin
@@ -15,10 +18,11 @@ production:
     port: 25
     domain: getjobsworth.org
 
+  # Exceptions in jobsworth might generate an error email. Who should we send it to?
   exception_notifier:
     email_prefix: "[Jobsworth error] "
     sender_address: error@getjobsworth.org
     exception_recipients: [exceptions@example.com]
 
   receiving_emails:
-    secret: k4soAd4lqr4Znh_jL7EcaA       # it's important to use a different key in production environment
+    secret: k4soAd4lqr4Znh_jL7EcaA       # this key protects the API for sending emails into jobsworth
